# Face-Kinship-Verification

./: .gitignore  App.js  KinFaceW2_AdaFace_Kinship.ipynb  README.md  best_model.pt  run.bat
backend/: main.py  pyproject.toml
backend/ml/: face_detector.py  kinship_head.py  pipeline.py
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  ImageUploader.jsx  LoadingSkeleton.jsx  Navbar.jsx  ResultCard.jsx
frontend/src/pages/: About.jsx  Analyze.jsx  Contact.jsx  Home.jsx
