[project]
name = "kinship-backend"
version = "1.0.0"
description = "Face Kinship Verification API — FastAPI + AdaFace + SCRFD (InsightFace)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0,<2.0.0",
    "Pillow>=10.0.0",
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
    "omegaconf>=2.3.0",
    "fvcore>=0.1.5",
    "scikit-learn>=1.3.0",
    "opencv-python-headless>=4.8.0",
    "onnxruntime>=1.17.0",
]
# NOTE: insightface==0.7.3 is installed from a pre-built wheel:
#   insightface-0.7.3-cp311-cp311-win_amd64.whl
# It cannot be resolved via `uv add` on Windows due to build issues.
# Install manually: uv pip install insightface-0.7.3-cp311-cp311-win_amd64.whl
